- The missing macro binding error message will not be shown if a global binding is available.
- Paladin always uses Cleanse instead of Purify (if they learned Cleanse).
- The focus MUF now disappear when the player clear the focus.
- There is no longer a default key bound to the macro, this caused too many problems with people not knowing how to change it.
- Minor code optimizations and bug fixes.


Changes from Decursive 2.0 BETA 4 to 2.0 BETA 5

- Fix a bug that caused the loss of per-character bindings.
- Added a new debuff type: 'Charm' that applies to charmed units so mages can see all charmed units ; previously they could only see charmed units with a magical debuff (as priests). (This need testing, the situation is difficult to reproduce)
- Added an option to change the transparency (Alpha) of the MUFs when a unit is not afflicted, it can be set to 0 to be completely transparent.
- The micro unit frames (MUFs) are set to a lower strata.
- "Arcane Blast" will no longer be shown as a Debuff.
- Added full French localization by Sylvin
- Added full Korean localization by Fenlis
- Fixed typos in localization.lua and added a missing option description.


Changes from Decursive 2.0 BETA 3 to 2.0 BETA 4

- Changed the minimum number of MUF per row to 1
- The 'Show Help' option also disable the handle tool-tip
- The focused unit won't be scanned if it's unfriendly (you won't see it in the MUFs nor in the live-list).
- The macro binding function has been enhanced, it correctly unbinds previously mapped key and restores previously mapped action and
  displays messages when a mapping succeed/fails or replace a currently mapped action.
- Added an option to not show out of range units in the live-list (enabled by default).
- On non-English client, the key is set to "NONE" in the localization files so Decursive will display a warning to the user.
- Babble-Spell library has been updated, Spanish spells should be supported.
- Decursive is now available on wowace.com SVN

