@@ -95,6 +95,8 @@ L:RegisterTranslations("zhCN", function() return {
     [Dcr.LOC.SPELL_PURGE]		=	Dcr.LOC.SPELL_PURGE,
 
     [BINDING_NAME_DCRSHOW]	=	BINDING_NAME_DCRSHOW,
+    
+    [BINDING_NAME_DCRMUFSHOWHIDE] =	BINDING_NAME_DCRMUFSHOWHIDE,
 
     [BINDING_NAME_DCRPRADD]	=	BINDING_NAME_DCRPRADD,
     [BINDING_NAME_DCRPRCLEAR]	=	BINDING_NAME_DCRPRCLEAR,
@@ -183,6 +185,8 @@ L:RegisterTranslations("zhCN", function() return {
     [Dcr.LOC.OPT_SHOWMFS_DESC] = Dcr.LOC.OPT_SHOWMFS_DESC,
     [Dcr.LOC.OPT_GROWDIRECTION] = Dcr.LOC.OPT_GROWDIRECTION,
     [Dcr.LOC.OPT_GROWDIRECTION_DESC] = Dcr.LOC.OPT_GROWDIRECTION_DESC,
+    [Dcr.LOC.OPT_SHOWBORDER] =  Dcr.LOC.OPT_SHOWBORDER,
+    [Dcr.LOC.OPT_SHOWBORDER_DESC] =  Dcr.LOC.OPT_SHOWBORDER_DESC,
     [Dcr.LOC.OPT_MAXMFS] = Dcr.LOC.OPT_MAXMFS,
     [Dcr.LOC.OPT_MAXMFS_DESC] = Dcr.LOC.OPT_MAXMFS_DESC,
     [Dcr.LOC.OPT_UNITPERLINES] = Dcr.LOC.OPT_UNITPERLINES,
