@@ -80,6 +80,8 @@ L:RegisterTranslations("zhTW", function() return {
     [Dcr.LOC.SPELL_PURGE]	=	'淨化術',
 
     [BINDING_NAME_DCRSHOW]	=	"顯示或隱藏 Decursive 工作條",
+    
+    [BINDING_NAME_DCRMUFSHOWHIDE] =	BINDING_NAME_DCRMUFSHOWHIDE,
 
     [BINDING_NAME_DCRPRADD]	=	"添加目標至優先列表",
     [BINDING_NAME_DCRPRCLEAR]	=	"清空優先列表",
@@ -173,6 +175,8 @@ L:RegisterTranslations("zhTW", function() return {
     [Dcr.LOC.OPT_SHOWMFS_DESC] = Dcr.LOC.OPT_SHOWMFS_DESC,
     [Dcr.LOC.OPT_GROWDIRECTION] = Dcr.LOC.OPT_GROWDIRECTION,
     [Dcr.LOC.OPT_GROWDIRECTION_DESC] = Dcr.LOC.OPT_GROWDIRECTION_DESC,
+    [Dcr.LOC.OPT_SHOWBORDER] =  Dcr.LOC.OPT_SHOWBORDER,
+    [Dcr.LOC.OPT_SHOWBORDER_DESC] =  Dcr.LOC.OPT_SHOWBORDER_DESC,
     [Dcr.LOC.OPT_MAXMFS] = Dcr.LOC.OPT_MAXMFS,
     [Dcr.LOC.OPT_MAXMFS_DESC] = Dcr.LOC.OPT_MAXMFS_DESC,
     [Dcr.LOC.OPT_UNITPERLINES] = Dcr.LOC.OPT_UNITPERLINES,
